Add main variables for fonts and colors

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -2,16 +2,27 @@
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
 $colors: (
-  primary: (
-    200: hsl(192, 70%, 51%),
-    300: hsl(136, 65%, 51%),
-    800: hsl(233, 26%, 24%),
+  primary-a: (
+    300: hsl(0, 90%, 76%),
+    400: hsl(0, 91%, 71%),
+  ),
+  primary-b: (
+    300: hsl(182, 90%, 76%),
+    400: hsl(182, 91%, 71%),
+  ),
+  primary-c: (
+    300: hsl(284, 89%, 79%),
+    400: hsl(284, 89%, 74%),
+  ),
+  secondary: (
+    400: hsl(234, 35%, 58%),
+    700: hsl(235, 35%, 18%),
+    800: hsl(234, 39%, 14%),
   ),
   neutral: (
     100: hsl(0, 0%, 100%),
-    200: hsl(0, 0%, 98%),
-    300: hsl(220, 16%, 96%),
-    400: hsl(233, 8%, 62%),
+    200: hsl(229, 52%, 96%),
+    400: hsl(227, 100%, 92%),
   ),
 );
 
