--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,10 +1,7 @@
 /// Regular font family
-$text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue',
-  'Helvetica', 'Arial', sans-serif !default;
-
-/// Code (monospace) font family
-$code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
-  'Monaco', monospace !default;
+$text-font-a: 'Kumbh Sans', sans-serif;
+$text-font-b: 'Roboto Slab', sans-serif;
+$text-font-c: 'Space Mono', sans-serif;
 
 /// Container's maximum width
 $max-width: 1180px;
