Add btn componenent and style

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -42,4 +42,8 @@ $colors: (
       }
     }
   }
+
+  // Interface for default values for primary colors.
+  --clr-primary: var(--clr-primary-a-400);
+  --clr-primary-light: var(--clr-primary-a-300);
 }
