Add another style for inactive primary btns

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -13,4 +13,13 @@
       background-color: var(--clr-primary-light);
     }
   }
+
+  &--inactive {
+    background-color: transparent;
+    color: inherit;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
 }
