--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -14,12 +14,31 @@
     }
   }
 
-  &--inactive {
+  &--primary-inactive {
     background-color: transparent;
     color: inherit;
 
     &:hover {
       background-color: transparent;
+    }
+  }
+
+  &--secondary {
+    border-radius: 1000px;
+    background-color: var(--clr-secondary-800);
+    height: rem(40);
+    width: rem(40);
+    color: var(--clr-neutral-100);
+    font-size: rem(15);
+  }
+
+  &--secondary-inactive {
+    background-color: var(--clr-neutral-200);
+    color: var(--clr-secondary-700);
+
+    &:hover {
+      outline: 1px solid var(--clr-neutral-200);
+      outline-offset: 5px;
     }
   }
 }
