--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -60,6 +60,19 @@ select {
   font: inherit;
 }
 
+// Remove arrows in input number fields (Chrome and Firefox)
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+  margin: 0;
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
