Add style for input number field

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -23,6 +23,7 @@ $colors: (
     100: hsl(0, 0%, 100%),
     200: hsl(229, 52%, 96%),
     400: hsl(227, 100%, 92%),
+    600: hsl(235, 8%, 67%),
   ),
 );
 
