--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -21,3 +21,8 @@ html {
 *::after {
   box-sizing: inherit;
 }
+
+button:focus-visible,
+input:focus-visible {
+  outline: 1px solid var(--clr-secondary-400);
+}
