--- a/src/styles/abstracts/_font-sizes.scss
+++ b/src/styles/abstracts/_font-sizes.scss
@@ -4,6 +4,7 @@ $scale: (
   sm: (
     100: 0.75rem,
     200: 0.6875rem,
+    250: 0.875rem,
     300: 0.875rem,
     400: 1.25rem,
     500: 1.5rem,
@@ -12,6 +13,7 @@ $scale: (
   lg: (
     100: 0.75rem,
     200: 0.8125rem,
+    250: 0.875rem,
     300: 1rem,
     400: 1.75rem,
     500: 2rem,
