--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -6,43 +6,48 @@
 body {
   color: var(--clr-neutral-400);
   font-family: $text-font-a;
-  font-size: var(--fs-sm-300);
+  font-size: var(--fs-300);
   font-weight: bold;
 }
 
 .h1 {
-  font-size: rem(100);
+  font-size: var(--fs-700);
   line-height: rem(120);
   letter-spacing: rem(-5);
 }
 
 .h2 {
-  font-size: rem(28);
+  font-size: var(--fs-400);
   line-height: rem(34);
 }
 
 .h3 {
-  font-size: rem(16);
+  font-size: var(--fs-300);
   line-height: rem(19);
   letter-spacing: rem(15);
   text-transform: uppercase;
 }
 
 .h4 {
-  font-size: rem(13);
+  font-size: var(--fs-200);
   line-height: rem(16);
   letter-spacing: rem(5);
   text-transform: uppercase;
 }
 
 .text-lg {
-  font-size: rem(14);
+  font-size: var(--fs-250);
   line-height: rem(18);
 }
 
 .text-sm {
-  font-size: rem(12);
+  font-size: var(--fs-100);
   line-height: rem(14);
+}
+
+.title {
+  font-size: var(--fs-500);
+  font-family: $text-font-a;
 }
 
 input[type='number'] {
