Add the pomodoro style list choice with style

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -53,3 +53,13 @@ body {
 input[type='number'] {
   font-size: rem(14);
 }
+
+.pomodoro-choice {
+  &__choice {
+    color: var(--clr-secondary-800);
+
+    &.btn--primary-inactive {
+      color: var(--clr-neutral-800);
+    }
+  }
+}
