--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -24,6 +24,7 @@ $colors: (
     200: hsl(229, 52%, 96%),
     400: hsl(227, 100%, 92%),
     600: hsl(235, 8%, 67%),
+    800: hsl(229, 14%, 45%),
   ),
 );
 
