--- a/src/styles/components/_counter.scss
+++ b/src/styles/components/_counter.scss
@@ -6,6 +6,7 @@
   position: relative;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -37,5 +38,9 @@
       stroke: var(--clr-primary-a-400);
       stroke-linecap: round;
     }
+  }
+
+  &__action {
+    margin-right: -10px;
   }
 }
