--- a/src/styles/components/_counter.scss
+++ b/src/styles/components/_counter.scss
@@ -10,8 +10,12 @@
   align-items: center;
   justify-content: center;
 
-  height: 300px;
-  width: 300px;
+  max-height: 300px;
+  max-width: 300px;
+
+  width: 100%;
+
+  aspect-ratio: 1;
 
   border: solid $border transparent;
   border-radius: 100%;
