Add responsive for tablet

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,4 +4,4 @@ $text-font-b: 'Roboto Slab', sans-serif;
 $text-font-c: 'Space Mono', sans-serif;
 
 /// Container's maximum width
-$max-width: 1180px;
+$max-width-sm: 410px;
