--- a/src/styles/abstracts/_font-sizes.scss
+++ b/src/styles/abstracts/_font-sizes.scss
@@ -39,7 +39,7 @@ $weights: (
         --fs-#{$size}: #{$value};
       }
     } @else {
-      @include breakpoint(large) {
+      @include breakpoint(medium) {
         @each $size, $value in $font-size {
           --fs-#{$size}: #{$value};
         }
