--- a/src/styles/components/_counter.scss
+++ b/src/styles/components/_counter.scss
@@ -1,7 +1,8 @@
 @use '../abstracts/' as *;
 
 .counter {
-  $border: 1rem;
+  $border-sm: 1rem;
+  $border-md: rem(22);
 
   position: relative;
 
@@ -17,30 +18,50 @@
 
   aspect-ratio: 1;
 
-  border: solid $border transparent;
+  border: solid $border-sm transparent;
   border-radius: 100%;
   background-clip: padding-box;
   background-color: var(--clr-secondary-800);
   box-shadow: -50px -50px 100px #272c5a, 50px 50px 100px #121530;
 
+  @include breakpoint(medium) {
+    max-height: 410px;
+    max-width: 410px;
+
+    border-width: $border-md;
+  }
+
   &:before {
     content: '';
 
     position: absolute;
-    inset: -$border;
+    inset: -$border-sm;
 
     z-index: -1;
 
     border-radius: 100%;
     background: linear-gradient(315deg, #2e325a 0%, #0e112a 100%);
+
+    @include breakpoint(medium) {
+      inset: -$border-md;
+    }
   }
 
   &__circle {
     position: absolute;
     padding: rem(10);
+
+    @include breakpoint(medium) {
+      padding: rem(14);
+    }
+
     & path {
       stroke: var(--clr-primary-a-400);
       stroke-linecap: round;
+
+      @include breakpoint(medium) {
+        stroke-width: rem(12);
+      }
     }
   }
 
