--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -9,25 +9,42 @@
 
   &__sup {
     display: grid;
-    grid-template-rows: auto min-content;
-
-    gap: 35%;
+    grid-template-rows: auto fit-content;
+    gap: 45px;
 
     margin-top: 2rem;
     z-index: 1;
+
+    @include breakpoint(medium) {
+      margin-top: rem(80);
+      gap: 55px;
+    }
+
+    @include breakpoint(large) {
+      margin-top: 1.5vw;
+      gap: 6.5dvh;
+    }
   }
 
   &__title,
-  &__settings {
+  &__settings,
+  &__choices {
     justify-self: center;
   }
 
+  &__choices {
+    min-width: rem(375);
+  }
   &__down {
     display: grid;
     justify-items: center;
     align-content: space-evenly;
 
     z-index: 0;
+
+    @include breakpoint(large) {
+      min-height: 600px;
+    }
   }
 
   &__settings {
