--- a/src/styles/abstracts/_font-sizes.scss
+++ b/src/styles/abstracts/_font-sizes.scss
@@ -14,10 +14,10 @@ $scale: (
     100: 0.75rem,
     200: 0.8125rem,
     250: 0.875rem,
-    300: 1rem,
+    300: 0.95em,
     400: 1.75rem,
     500: 2rem,
-    700: 6.25rem,
+    700: 6rem,
   ),
 );
 
