Add the raadio buttons for color choice

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -3,4 +3,5 @@
 @forward './pomodoro-choice';
 @forward './counter';
 @forward './input-radio';
-@forward './typo-choice';
+@forward './typo-choice-item';
+@forward './color-choice-item';
