--- a/src/styles/components/_typo-choice-item.scss
+++ b/src/styles/components/_typo-choice-item.scss
@@ -1,6 +1,6 @@
 @use '../abstracts/' as *;
 
-.typo-choice {
+.typo-choice-item {
   display: flex;
   align-items: center;
   justify-content: center;
