--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -18,6 +18,7 @@ $colors: (
     400: hsl(234, 35%, 58%),
     700: hsl(234, 35%, 18%),
     800: hsl(234, 39%, 14%),
+    900: hsl(233, 47%, 7%, 0.5),
   ),
   neutral: (
     100: hsl(0, 0%, 100%),
