--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -5,3 +5,5 @@
 @forward './input-radio';
 @forward './typo-choice-item';
 @forward './color-choice-item';
+@forward './modal-pomodoro';
+@forward './modal';
