--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -7,6 +7,7 @@
   justify-content: stretch;
   grid-template-rows: min-content auto;
 
+  isolation: isolate;
   &__sup {
     display: grid;
     grid-template-rows: auto fit-content;
