Add final style for mobile. Fix pomodoro style choice for small screen width

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -15,7 +15,7 @@ $colors: (
     400: hsl(284, 89%, 74%),
   ),
   secondary: (
-    400: hsl(234, 35%, 58%),
+    400: rgb(110, 118, 185),
     700: hsl(234, 35%, 18%),
     800: hsl(234, 39%, 14%),
     900: hsl(233, 47%, 7%, 0.5),
@@ -24,7 +24,9 @@ $colors: (
     100: hsl(0, 0%, 100%),
     200: hsl(229, 52%, 96%),
     400: hsl(227, 100%, 92%),
+    500: hsl(0, 3%, 89%),
     600: hsl(235, 8%, 67%),
+    700: #a5a6b2,
     800: hsl(229, 14%, 45%),
   ),
 );
