--- a/src/styles/components/_number-input.scss
+++ b/src/styles/components/_number-input.scss
@@ -6,6 +6,12 @@
   justify-content: space-between;
   align-items: center;
 
+  @include breakpoint(medium) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: rem(10);
+  }
+
   &__input-wrapper {
     position: relative;
     width: fit-content;
