--- a/src/styles/components/_modal-pomodoro.scss
+++ b/src/styles/components/_modal-pomodoro.scss
@@ -8,14 +8,15 @@
     --padding: 40px;
   }
 
-  background-color: var(--clr-neutral-100);
+  flex-grow: 1;
+  max-width: rem(340);
   margin-inline: rem(24);
 
+  background-color: var(--clr-neutral-100);
   border-radius: 15px;
 
   @include breakpoint(medium) {
     max-width: rem(540);
-    margin-inline: auto;
   }
 
   &__sup {
