--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -2,9 +2,15 @@
   position: fixed;
   inset: 0;
 
-  display: grid;
-  align-items: center;
   background-color: var(--clr-secondary-900);
 
   z-index: 1;
+
+  &__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    overflow-y: scroll;
+  }
 }
