Color and typo can now be change from the modal interface

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,3 +5,9 @@ $text-font-c: 'Space Mono', sans-serif;
 
 /// Container's maximum width
 $max-width-sm: 410px;
+
+:root {
+  --main-typo: 'Kumbh Sans', sans-serif;
+  --clr-primary: var(--clr-primary-a-400);
+  --clr-primary-light: var(--clr-primary-a-300);
+}
