--- a/src/styles/components/_counter.scss
+++ b/src/styles/components/_counter.scss
@@ -4,9 +4,23 @@
   $border-sm: 1rem;
   $border-md: rem(22);
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+
   transition: transform 100ms ease-in-out;
-  &:hover {
-    transform: translateY(-2px) scale(1.005);
+
+  @include on-hover {
+    &:hover {
+      transform: translateY(-2px) scale(1.005);
+    }
+  }
+
+  @include breakpoint(medium) {
+    width: unset;
   }
 
   &__body {
@@ -51,7 +65,6 @@
       inset: -$border-sm;
 
       z-index: -1;
-
       border-radius: 100%;
       background: linear-gradient(315deg, #2e325a 0%, #0e112a 100%);
 
